# blumi-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh
.github/workflows/: ci.yml
assets/: blumi-header.html
blugo/: .gitignore  README.md  pubspec.yaml
blugo/android/: settings.gradle.kts
blugo/android/app/: build.gradle.kts
blugo/assets/: memory_graph.html
blugo/ios/Runner/: Info.plist
blugo/ios/Runner.xcodeproj/: project.pbxproj
blugo/lib/: main.dart
blugo/lib/data/: api.dart  cache.dart  discovery.dart  elevenlabs.dart  events.dart  models.dart  notifications.dart  push.dart  saved_server.dart  sse.dart  voice.dart
blugo/lib/state/: app.dart  dispatch.dart  session.dart
blugo/lib/ui/: connect.dart  control.dart  dispatch_broadcast.dart  dispatch_inbox.dart  dispatch_splash.dart  dispatch_thread.dart  grid_map.dart  grid_node.dart  home.dart  markdown.dart  node_sheets.dart  palette.dart  theme.dart  (+1 more)
blugo/test/: widget_test.dart
crates/blumi/: Cargo.toml  build.rs
crates/blumi-config/: Cargo.toml
crates/blumi-config/src/: lib.rs  paths.rs  pricing.rs  provider.rs
crates/blumi-core/: Cargo.toml
crates/blumi-core/src/: actor.rs  agent.rs  brain.rs  checkpoint.rs  context.rs  emit.rs  error.rs  eventlog.rs  exec.rs  fcm.rs  hooks.rs  lib.rs  llm.rs  memory.rs  permissions.rs  persona.rs  pipeline.rs  push.rs  recovery.rs  registry.rs  router.rs  rpl.rs  runner.rs  session.rs  subagent.rs  tool.rs
crates/blumi-cron/: Cargo.toml
crates/blumi-cron/src/: lib.rs  schedule.rs
crates/blumi-exec/: Cargo.toml
crates/blumi-exec/src/: docker.rs  git_identity.rs  lib.rs  local.rs  ssh.rs
crates/blumi-gateway/: Cargo.toml
crates/blumi-gateway/src/: discord.rs  lib.rs  slack.rs  telegram.rs  whatsapp.rs
crates/blumi-knowledge/: Cargo.toml
crates/blumi-knowledge/migrations/: 0001_knowledge.sql  0002_graph.sql  0003_graph_typed.sql  0004_symbol_value.sql
crates/blumi-knowledge/src/: extract.rs  extract_ts.rs  lib.rs
crates/blumi-llm/: Cargo.toml
crates/blumi-llm/src/: accel.rs  anthropic.rs  embed_cache.rs  embeddings_grid.rs  embeddings_local.rs  embeddings_openai.rs  gemini.rs  lib.rs  mock.rs  openai.rs  registry.rs  retry.rs
crates/blumi-lsp/: Cargo.toml
crates/blumi-mcp/: Cargo.toml
crates/blumi-mcp/src/: lib.rs
crates/blumi-persist/: Cargo.toml
crates/blumi-persist/migrations/: 0003_checkpoints.sql  0004_memory.sql  0005_plans.sql  0006_memory_graph.sql  0007_memory_pinned.sql  0008_memory_value.sql  0009_session_goal.sql
crates/blumi-persist/src/: lib.rs  memory_store.rs
crates/blumi-playbook/: Cargo.toml
crates/blumi-playbook/src/: lib.rs
crates/blumi-protocol/: Cargo.toml
crates/blumi-protocol/src/: command.rs  event.rs  ids.rs  lib.rs  message.rs
crates/blumi-skills/: Cargo.toml
crates/blumi-skills/bundled/skills/grid-ops/: SKILL.md
crates/blumi-skills/bundled/skills/sp-writing-plans/: SKILL.md
crates/blumi-skills/bundled/skills/workos-auth/: SKILL.md
crates/blumi-skills/src/: bundled.rs  catalog.rs  grid_dispatch.rs  grid_status.rs  lib.rs  memory.rs  memory_tool.rs  reload.rs  restart_gateway.rs  run_tests.rs  self_config.rs  skill_manager.rs  skill_tool.rs
crates/blumi-task/: Cargo.toml
crates/blumi-task/src/: lib.rs
crates/blumi-tools/: Cargo.toml
crates/blumi-tools/src/: code_graph.rs  code_retrieve.rs  code_search.rs  delegate.rs  dir.rs  files.rs  lib.rs  path.rs  plan.rs  search.rs  session_search.rs  shell.rs  todo.rs
crates/blumi-tui/: Cargo.toml
crates/blumi-tui/src/: app.rs  commands.rs  cost.rs  dialog.rs  diff.rs  highlight.rs  icons.rs  lib.rs  logo.rs  markdown.rs  mascot.rs  model.rs  motion.rs  primitives.rs  theme.rs  update.rs  view.rs  wizard.rs
crates/blumi-tui/src/snapshots/: blumi_tui__view__tests__conversation.snap  blumi_tui__view__tests__dashboard_full.snap  blumi_tui__view__tests__landing.snap
crates/blumi-voice/: Cargo.toml
crates/blumi-voice/src/: lib.rs
crates/blumi-web/: Cargo.toml
crates/blumi-web/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
crates/blumi-web/frontend/public/: manifest.webmanifest  sw.js
crates/blumi-web/frontend/src/: App.tsx  api.ts  main.tsx  notify.ts  styles.css  types.ts
crates/blumi-web/frontend/src/components/: ApprovalCard.tsx  ClarifyCard.tsx  Composer.tsx  ControlCenter.tsx  Header.tsx  Login.tsx  Md.tsx  Message.tsx  RunPanel.tsx  Sidebar.tsx  Thinking.tsx  ToolCard.tsx
crates/blumi-web/src/: api.rs  assets.rs  auth.rs  lib.rs
crates/blumi/src/: accel.rs  always_on.rs  branding.rs  cron.rs  discovery.rs  engine.rs  evolve.rs  gateway.rs  knowledge.rs  loop_run.rs  main.rs  mcp.rs  notify.rs  onboarding.rs  playbook.rs  prompt.rs  providers.rs  remote.rs  resolve.rs  retrospect.rs  run.rs  serve.rs  session.rs  task.rs  tui.rs  web.rs  workspace.rs
crates/blumi/src/grid/: client.rs  mod.rs
crates/lumi/: Cargo.toml
crates/lumi-config/: Cargo.toml
crates/lumi-config/src/: lib.rs  paths.rs  provider.rs
crates/lumi-core/: Cargo.toml
crates/lumi-cron/: Cargo.toml
crates/lumi-exec/: Cargo.toml
crates/lumi-gateway/: Cargo.toml
crates/lumi-llm/: Cargo.toml
crates/lumi-llm/src/: anthropic.rs  lib.rs  mock.rs  openai.rs  registry.rs  retry.rs
crates/lumi-lsp/: Cargo.toml
crates/lumi-mcp/: Cargo.toml
crates/lumi-persist/: Cargo.toml
crates/lumi-persist/migrations/: 0001_init.sql
crates/lumi-persist/src/: lib.rs
crates/lumi-protocol/: Cargo.toml
crates/lumi-protocol/src/: capability.rs  command.rs  event.rs  lib.rs  message.rs  stream.rs  tool.rs
crates/lumi-skills/: Cargo.toml
crates/lumi-skills/src/: lib.rs
crates/lumi-tools/: Cargo.toml
crates/lumi-tools/src/: dir.rs  files.rs  lib.rs  search.rs  shell.rs  todo.rs
crates/lumi-tui/: Cargo.toml
crates/lumi-web/: Cargo.toml
crates/lumi/src/: main.rs  prompt.rs  run.rs  session.rs
docs/: grid-demo.md
docs/design/: code-graph.md  rpl-v2-worktree.md
docs/diagrams/: generate_grid_flow.py  generate_social.py  generate_tui_arch.py
scripts/: vendor-skills.sh
(+39 files in other folders)
