[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/ankur/blumi-cli"
authors = ["Ankur <ankur.nairit@gmail.com>"]

[workspace.dependencies]
# Internal crates
blumi-protocol = { path = "crates/blumi-protocol" }
blumi-core = { path = "crates/blumi-core" }
blumi-llm = { path = "crates/blumi-llm" }
blumi-tools = { path = "crates/blumi-tools" }
blumi-exec = { path = "crates/blumi-exec" }
blumi-mcp = { path = "crates/blumi-mcp" }
blumi-lsp = { path = "crates/blumi-lsp" }
blumi-persist = { path = "crates/blumi-persist" }
blumi-skills = { path = "crates/blumi-skills" }
blumi-cron = { path = "crates/blumi-cron" }
blumi-gateway = { path = "crates/blumi-gateway" }
blumi-config = { path = "crates/blumi-config" }
blumi-tui = { path = "crates/blumi-tui" }
blumi-web = { path = "crates/blumi-web" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# Serde / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
jsonschema = "0.26"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }

# HTTP / SSE client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-stream = "0.2"

# Web server (Phase 4)
axum = "0.7"
rust-embed = { version = "8", features = ["mime-guess"] }
async-stream = "0.3"
mime_guess = "2"

# Persistence
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate"] }

# Config / CLI
figment = { version = "0.10", features = ["json", "env"] }
clap = { version = "4", features = ["derive", "env"] }

# Errors / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utility
dirs = "5"
regex = "1"
glob = "0.3"
similar = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
