[package]
name = "blumi-config"
description = "Layered configuration (figment) for blumi."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
thiserror.workspace = true
dirs.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
