[package]
name = "blumi-core"
description = "The brain: traits, session actor (agent loop), context mgmt, permissions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-protocol.workspace = true
blumi-config.workspace = true

tokio = { workspace = true }
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
time.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
glob.workspace = true
base64.workspace = true
# Web Push (#209d): VAPID + RFC 8291 payload encryption. Client-agnostic — we
# build the request and send it with our own reqwest (in the binary's notifier).
web-push-native = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
