[package]
name = "blumi-cron"
description = "scheduler -> headless sessions -> delivery."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true

[dev-dependencies]
