[package]
name = "blumi-gateway"
description = "Messaging gateways (Telegram/Discord/Slack/WhatsApp) over a headless session."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true
blumi-protocol.workspace = true
blumi-voice.workspace = true

tokio = { workspace = true }
reqwest.workspace = true
tokio-tungstenite.workspace = true
axum.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-util.workspace = true
