[package]
name = "blumi-knowledge"
description = "Native-lite code understanding: symbol extraction + hybrid FTS5/vector code search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true

sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
sha2.workspace = true
ignore = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
