[package]
name = "blumi-knowledge"
description = "Native-lite code understanding: symbol extraction + hybrid FTS5/vector code search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true

sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
sha2.workspace = true
ignore = "0.4"
# Structural code graph (feature `code-graph`): tree-sitter parsers. Optional so
# the default native-lite build never compiles a C grammar.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

[features]
default = []
# Tier-1 structural code graph: tree-sitter declaration/reference extraction.
# Bundles grammars for Rust + Python + Go + JS/TS.
code-graph = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-go",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
