[package]
name = "blumi-llm"
description = "LLM provider clients (OpenAI-compatible, Anthropic, Gemini, ...)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true
blumi-config.workspace = true
blumi-protocol.workspace = true

tokio = { workspace = true }
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
async-stream = "0.3"

reqwest.workspace = true
eventsource-stream.workspace = true

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Bundled local embedding model (ONNX via ort). Heavy native dep — gated behind
# a feature so a lean build / restricted environment can opt out. The released
# binary enables it (zero-config offline embeddings).
fastembed = { version = "4", optional = true }

# Bundled local embeddings ship by default (zero-config offline). A lean /
# CI-constrained build can opt out with `--no-default-features`.
[features]
default = ["local-embeddings"]
local-embeddings = ["dep:fastembed"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
