[package]
name = "blumi-persist"
description = "SQLite (sqlx) persistence: sessions, messages, FTS5 search."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true
blumi-protocol.workspace = true

sqlx = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true }
serde_json.workspace = true
time.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"
