[package]
name = "blumi-playbook"
description = "YAML playbooks: multi-step workflows with gates + checkpoint/resume."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
