[package]
name = "blumi-protocol"
description = "Wire contract for blumi: Command / Event / Message / ToolResult (pure serde)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# `rc` enables Serialize/Deserialize for the `Arc<[ContentPart]>` in `Message`
# (JSON format is unchanged — it (de)serializes as a normal sequence).
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
