[package]
name = "blumi-skills"
description = "SKILL.md skills + dual memory (MEMORY/USER)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true
blumi-protocol.workspace = true
blumi-config.workspace = true

tokio = { workspace = true }
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
