[package]
name = "blumi-tools"
description = "Built-in tools for the blumi agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true
blumi-protocol.workspace = true
blumi-persist.workspace = true

tokio = { workspace = true }
tokio-util.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
glob.workspace = true
similar.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
blumi-exec.workspace = true
tempfile = "3"
