[package]
name = "blumi-tui"
description = "Terminal UI for blumi (ratatui)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true
blumi-protocol.workspace = true
blumi-task.workspace = true
blumi-config.workspace = true

ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"
textwrap = "0.16"
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = { workspace = true }
nucleo-matcher = "0.3"
serde = { workspace = true }
toml = "0.8"

tokio = { workspace = true }
futures.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util.workspace = true
tempfile = "3"
