[package]
name = "blumi-web"
description = "axum server + embedded React build."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blumi-core.workspace = true
blumi-protocol.workspace = true
blumi-config.workspace = true
blumi-persist.workspace = true
blumi-voice.workspace = true

tokio = { workspace = true }
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true

axum.workspace = true
rust-embed.workspace = true
async-stream.workspace = true
mime_guess.workspace = true

# `std` pulls password-hash → rand_core/getrandom, which provides `OsRng`
# (used in auth.rs). Without it, `blumi-web` only built inside the workspace,
# where another crate happened to enable the feature.
argon2 = { workspace = true, features = ["std"] }
hmac.workspace = true
sha2.workspace = true
base64.workspace = true

anyhow.workspace = true
tracing.workspace = true

# Machine name for /api/config (so blugo can label a gateway by its host).
whoami = "1"
