[package]
name = "blumi"
description = "blumi — local-first, provider-agnostic agentic coding assistant."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "blumi"

[[bin]]
name = "blumi"
path = "src/main.rs"

[dependencies]
blumi-protocol.workspace = true
blumi-core.workspace = true
blumi-config.workspace = true
blumi-llm.workspace = true
blumi-tools.workspace = true
blumi-exec.workspace = true
blumi-skills.workspace = true
blumi-mcp.workspace = true
blumi-persist.workspace = true
blumi-tui.workspace = true
blumi-web.workspace = true
blumi-cron.workspace = true
blumi-lsp.workspace = true
blumi-playbook.workspace = true
blumi-gateway.workspace = true
blumi-voice.workspace = true
blumi-task.workspace = true

tokio = { workspace = true }
tokio-util.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
sha2.workspace = true
# LAN auto-discovery: advertise + browse `_blumi._tcp` for the grid. whoami
# pinned to 1.x to match blumi-web (one copy in the tree); flume matches the
# version mdns-sd already pulls in (its browse Receiver is a flume channel).
mdns-sd = "0.20"
whoami = "1"
flume = "0.11"

[dev-dependencies]
tempfile = "3"
