[package]
name = "blumi"
description = "blumi — local-first, provider-agnostic agentic coding assistant."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "blumi"

[[bin]]
name = "blumi"
path = "src/main.rs"

[dependencies]
blumi-protocol.workspace = true
blumi-core.workspace = true
blumi-config.workspace = true
blumi-llm.workspace = true
blumi-tools.workspace = true
blumi-exec.workspace = true
blumi-skills.workspace = true
blumi-mcp.workspace = true
blumi-persist.workspace = true
blumi-knowledge.workspace = true
blumi-tui.workspace = true
blumi-web.workspace = true
blumi-cron.workspace = true
blumi-lsp.workspace = true
blumi-playbook.workspace = true
blumi-gateway.workspace = true
blumi-voice.workspace = true
blumi-task.workspace = true

tokio = { workspace = true }
tokio-util.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
reqwest.workspace = true
eventsource-stream.workspace = true
futures.workspace = true
sha2.workspace = true
# LAN auto-discovery: advertise + browse `_blumi._tcp` for the grid. whoami
# pinned to 1.x to match blumi-web (one copy in the tree); flume matches the
# version mdns-sd already pulls in (its browse Receiver is a flume channel).
mdns-sd = "0.20"
whoami = "1"
flume = "0.11"

# Apple-first GPU acceleration: on Apple Silicon, turn on the bundled embedder's
# CoreML/Metal execution provider by default (≈zero extra binary size — the EP is
# baked into the same ONNX Runtime fastembed already downloads). Cargo unifies
# these features with the base `blumi-llm` dep above. Non-Apple targets stay CPU
# unless built with `--features gpu-cuda` (or `gpu-coreml`).
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
blumi-llm = { workspace = true, features = ["gpu-coreml"] }

[features]
# Opt-in NVIDIA CUDA acceleration (heavy; needs CUDA toolkit + driver):
#   cargo build --release --features gpu-cuda
gpu-cuda = ["blumi-llm/gpu-cuda"]
# Explicit Apple CoreML opt-in (already the default on Apple Silicon).
gpu-coreml = ["blumi-llm/gpu-coreml"]

[dev-dependencies]
tempfile = "3"
