[package]
name = "lumi-protocol"
description = "Wire contract for lumi: Command / Event / Message / ToolResult (pure serde)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
time.workspace = true
