[package]
name = "lumi-skills"
description = "SKILL.md skills + dual memory (MEMORY/USER)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
