[package]
name = "lumi-tools"
description = "Built-in tools for the lumi agent."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
lumi-core.workspace = true
lumi-protocol.workspace = true

tokio = { workspace = true }
tokio-util.workspace = true
async-trait.workspace = true

serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

anyhow.workspace = true
tracing.workspace = true
regex.workspace = true
glob.workspace = true
similar.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
lumi-exec.workspace = true
tempfile = "3"
