[package]
name = "lumi"
description = "lumi — local-first, provider-agnostic agentic coding assistant."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "lumi"

[[bin]]
name = "lumi"
path = "src/main.rs"

[dependencies]
lumi-protocol.workspace = true
lumi-core.workspace = true
lumi-config.workspace = true
lumi-llm.workspace = true
lumi-tools.workspace = true
lumi-exec.workspace = true
lumi-skills.workspace = true
lumi-persist.workspace = true

tokio = { workspace = true }
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
